--- a/angular.json
+++ b/angular.json
@@ -23,8 +23,8 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [              "./node_modules/bootstrap/dist/css/bootstrap.css",
-
+            "styles": [
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -118,8 +118,13 @@
               "devServerTarget": "oussamaProjectColoc:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "oussamaProjectColoc"
 }
